--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -16,9 +16,9 @@ jobs:
     - name: pip install
       run: pip install -r requirements.txt
     - name: download dataset
-      run: wget -O data/heart.csv ${{github.event.client_payload.dataseturl}}
+      run: wget -O data/usa_rain_prediction_dataset_2024_2025.csv ${{github.event.client_payload.dataseturl}}
     - name: cat dataset
-      run: cat data/heart.csv 
+      run: cat data/usa_rain_prediction_dataset_2024_2025.csv 
     - name: train model
       run: python model/train.py
     - name: docker build
